--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 :root {
+  --foreground-color: #212529;
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -10,6 +11,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
+    --foreground-color: #212529;
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
@@ -17,11 +19,26 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  color: var(--foreground-color);
   background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+
+@layer base {
+  h1 {
+    @apply text-5xl font-secondFont text-primary-10 mb-2;
+  }
+  h2 {
+    @apply text-5xl font-secondFont text-primary-10 font-bold;
+  }
+  h3 {
+    @apply text-2xl font-secondFont text-primary-10 font-bold;
+  }
+  p {
+    @apply text-xl;
+  }
 }
